--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,5 @@ mod_name=PaimonFood
 mod_license=Apache 2.0
 mod_version=1.2.0
 mod_group_id=com.ldsdb.paimonfood
-mod_authors=LDS_DB
+mod_authors=FunnyBaymax, Ecaree
 mod_description=
